@@ -1,3 +1,4 @@
+    2022/10/05: quest ui checks
     2022/10/04: checks for valid math.random(), less frequent cottage tree and bush growth (abms), ui adjustments 
     2022/10/02: Quests can now require higher counts of items to complete, more cottage fixing
     2022/09/30: add a debug check for annoying bug
